@startuml

package "positioning" #LightBlue {

    interface Measure {
        + absolute(total: AbsoluteMeasure): AbsoluteMeasure
    }

    class AbsoluteMeasure {
        - mm: float
        ---
        + from_cm(value: float): AbsoluteMeasure
        + from_pixels(value: int, dpi: float): AbsoluteMeasure
        ---
        + to_mm(): float
        + to_cm(): float
        + to_pixels(dpi: float): int
        ---
        + absolute(total: AbsoluteMeasure): AbsoluteMeasure
    }

    AbsoluteMeasure --|> Measure

    class RelativeMeasure {
        - proportion: float
        + absolute(total: AbsoluteMeasure): AbsoluteMeasure
    }

    RelativeMeasure --|> Measure

    class Size {
        - width: Measure
        - height: Measure
        + absolute(size: AbsoluteSize): AbsoluteSize
    }

    class AbsoluteSize {
        + width: AbsoluteMeasure
        + height: AbsoluteMeasure
        + absolute(size: AbsoluteSize): AbsoluteSize
    }

    AbsoluteSize --|> Size

    class Position {
        + layer: int
        ' From top-left
        - x: Measure
        - y: Measure
        - size: Size
        + absolute(size: AbsoluteSize): AbsolutePosition
    }

    class AbsolutePosition {
        + x: AbsoluteMeasure
        + y: AbsoluteMeasure
        + size: AbsoluteSize
        + absolute(size: AbsoluteSize): AbsolutePosition
    }

    AbsolutePosition --|> Position

}

package "styling" #LightPink {

    class Color {
        - hex : String
        + from_rgb(r: int, g: int, b: int): Color
        + from_hex(hex: String): Color
        + from_name(name: String): Color
        ---
        + to_rgb(): (int, int, int)
        + to_hex(): String
    }

    enum TextAlignment {
        LEFT
        CENTER
        RIGHT
    }

    enum TextFormatting {
        PLAIN
        MARKDOWN
    }

    class FontStyle {
        + font_name: String
        + font_size: int
    }

    enum LineStyle {
        NONE
        SOLID
        DASHED
        DOTTED
    }

    enum Shape {
        RECTANGLE
        ' TODO: add other shapes
    }

    class BorderStyle {
        - color: Color
        - width: Measure
        - style: LineStyle
    }

    enum ImageFormatting {
        CROP
        RESCALE
    }

}

package featuring #LightGreen {

    class Feature {
        - name: String
        - description: String
        - position: Position
        + generate_element(value: T): Element
    }

    ' Feature *-- "1" Position

    class TextFeature {
        - font: FontStyle
        - formatting: TextFormatting
        - alignment: TextAlignment
    }

    TextFeature --|> Feature

    class GraphicalFeature {
        - shape: Shape
        - border: BorderStyle
    }

    GraphicalFeature --|> Feature

    class ImageFeature {
        - image_path: String
        - formatting: ImageFormatting
    }

    ImageFeature --|> GraphicalFeature

    class ColorFeature {
        - color: Color
    }

    ColorFeature --|> GraphicalFeature

}

package "carding" #LightYellow {

    class Element {
        - feature: Feature
        - value: T
        + render(position: AbsolutePosition)
    }

    class Card {
        - List<Element> elements
    }

    class Deck {
        - width: Measure
        - height: Measure
        - Dict<str, Feature> features
        - List<Card> cards
        - repetitions: int
    }

}

@enduml
